# doc-qa-assistant

./: .env.example  .gitignore  2026-06-08-083309-local-command-caveatcaveat-the-messages-below.txt  2026-06-10-161225-local-command-caveatcaveat-the-messages-below.txt  CLAUDE.md  docker-compose.yml  pyproject.toml
agentic/: pyproject.toml
agentic/app/: config.py  graph.py  graph_state.py  main.py  models.py
agentic/app/agents/: executor.py  generator.py  planner.py  pre_classifier.py
agentic/app/routers/: query.py
agentic/app/services/: embedder.py  groq_client.py
agentic/app/tools/: registry.py  vector_search.py  web_search.py
agentic/tests/: test_graph.py  test_tools.py
airflow/: requirements.txt
airflow/dags/: s3_to_kafka_dag.py
airflow/plugins/rag_ingestion/: producer.py  s3_utils.py  schemas.py
backend/: .gitignore  pyproject.toml
backend/app/: config.py  database.py  eval_runner.py  main.py  models.py  telemetry.py
backend/app/middleware/: logging.py  request_id.py
backend/app/routers/: documents.py  eval.py  health.py  qa.py  sessions.py
backend/app/services/: bm25_store.py  cache.py  citation_parser.py  confidence_scorer.py  corrections.py  deduplicator.py  embedder.py  evaluator.py  hallucination_guard.py  llm.py  parser.py  prompt_builder.py  retriever.py  session_memory.py  vector_store.py
backend/tests/: conftest.py  test_cache_memory.py  test_citations.py  test_confidence.py  test_document_management.py  test_eval.py  test_hallucination.py  test_ingestion.py  test_models.py  test_observability.py  test_parser.py  test_routers.py  test_services.py
docs/: 2026-06-07-085009-uv-add-fastapi-uvicornstandard-pydantic-pydanti.txt  2026-06-07-101200-local-command-caveatcaveat-the-messages-below.txt  2026-06-08-133845-local-command-caveatcaveat-the-messages-below.txt  2026-06-08-171409-local-command-caveatcaveat-the-messages-below.txt  2026-06-10-134657-local-command-caveatcaveat-the-messages-below.txt  2026-06-11-100719-add-source-confidence-scoring-to-the-rag-retrieva.txt  feature-f7-confidence-scoring.md  ingestion-pipeline.md  workflow-backend.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatWindow.tsx  DocumentSidebar.tsx  FileUpload.tsx  MessageBubble.tsx
frontend/src/lib/: api.ts
monitoring/: prometheus.yml  redpanda-console-config.yaml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  rag_dashboard.json
worker/: conftest.py  consumer.py  ingestion_handler.py  pyproject.toml  s3_client.py  schemas.py  status_publisher.py
worker/tests/: test_consumer.py
