[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-core==0.3.17",
    "langchain-groq==0.2.1",
    "langchain-qdrant==0.2.0",
    "langgraph==0.2.28",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client==1.11.3",
    "sentence-transformers==3.3.1",
    "structlog>=26.1.0",
    "tavily-python==0.5.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
