[project]
name = "backend"
version = "0.1.0"
description = "RAG Document Q&A Assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=3.3.0",
    "qdrant-client>=1.12.0",
    "groq>=0.13.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "rank-bm25>=0.2.2",
    "slowapi>=0.1.9",
    "cachetools>=7.1.4",
    "tenacity>=9.1.4",
    "python-magic>=0.4.27",
    "python-docx>=1.2.0",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
    "pdf2image>=1.17.0",
    "langdetect>=1.0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
