[project]
name = "rag-worker"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "backend",
    "confluent-kafka>=2.4.0",
    "boto3>=1.34.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv.sources]
backend = { path = "../backend", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["../backend", ".."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
